# read_tune

./: .env.sample  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
playlist/: asgi.py  settings.py  urls.py  wsgi.py
playlist/templates/: 404.html  500.html
read_tune/: apps.py  services.py  urls.py  views.py
read_tune/static/read_tune/: book.js  styles.css
read_tune/templates/read_tune/: book_list.html  index.html  layout.html  playlist_generated.html
read_tune/tests/: test_services.py
